--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "Replicate https://text.recoveryversion.bible/list/list.htm",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "start": "node bin/index.js"
   },
   "repository": {
-    "type": "git", 
+    "type": "git",
     "url": "C:\\Programming\\verse-requester"
   },
   "author": "T.H.",
   "license": "ISC",
   "bin": {
     "verse": "./bin/index.js"
+  },
+  "devDependencies": {
+    "vitest": "^0.34.1"
   }
 }
